style/layout/_footer.scss
$footer-peek: 10rem;

footer {
	background-color: $ucla-blue-darkest;
	color: white;

	padding: $page-margin-width;
	margin-top: $page-margin-width;

	.columns {
		@extend %main-aligned;

		display: flex;

		@at-root .footer-links {
			flex-grow: 1;
		}

		@media #{$bp-main} {
			padding-right: 0;
		}

		@media #{$bp-footer} {
			flex-direction: column-reverse;
		}
	}

	ul {
		@extend %menu-list;
	}

	@at-root .footer-logos img {
		display: block;
		margin: 0 auto;

		&:first-child {
			height: 7rem;
			margin-top: -1em;

			@media #{$bp-footer} {
				margin-top: $page-margin-width;
			}
		}

		&:last-child {
			height: 10rem;
		}
	}

	@at-root .footer-links {
		text-align: right;

		@media #{$bp-footer} {
			text-align: center;
		}

		ul {
			display: inline-block;
			@extend %divider-bottom;
			padding-bottom: 1em;
		}
	}

	position: relative;

	@at-root .peek-outline {
		position: absolute;
		right: $page-margin-width;
		top: -$footer-peek;
		height: $footer-peek * 1.4;
		max-width: 100%;
		z-index: -1;

		@media #{$bp-main} {
			left: 0;
			right: 0;
			margin: 0 auto;

			@at-root footer {
				margin-top: $footer-peek + $page-margin-width;
			}
		}
	}
}

